tests/errors/no_pins_in_main.nm
abstract component Main {
    pin A: input = 1;
}